--- a/Avaliação 1/index.html
+++ b/Avaliação 1/index.html
@@ -172,54 +172,95 @@
         </div>
     </main>
 
-    <div class="imagens-2x2">
+    <div class="gridmidias">
 
-        <div class="imagem-card">
-            <p class="esporte">BASQUETE</p>
-            <div class="imagem-container">
-                <span class="categoria">NOTÍCIA</span>
-                <img src="https://images.flamengo.com.br/public/images/artigos/36927/1763920457.jpeg" alt="Imagem 1">
+        <!-- Card 1 -->
+        <div class="bloco">
+            <div class="topo-bloco">
+                <p class="rotulo">REMO E CANOAGEM</p>
+                <a class="ver-todas" href="https:/">VEJA TODAS AS<br>NOTÍCIAS</a>
             </div>
-            <div class="texto-card">
-                <h3>noticia<span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
-                <p>cop texto</p>
-            </div>
+            <hr class="linha-separadora">
+
+            <a class="midia" href="https://">
+                <span class="tag">NOTÍCIA</span>
+                <img src="https://images.flamengo.com.br/public/images/artigos/36927/1763920457.jpeg" alt="">
+
+                <div class="texto-container">
+                    <span class="textoimg">
+                        É CAMPEÃO! FLAMENGO VENCE SEXTA REGATA E CONQUISTA O ESTADUAL DE REMO DE FORMA INVICTA
+                    </span>
+                    <span class="subtextoimg">
+                        Conquista marca o 56º título carioca do Esporte Fundador Rubro-Negro; o décimo sem perder
+                        nenhuma regata
+                    </span>
+                </div>
+            </a>
         </div>
 
-        <div class="imagem-card">
-            <p class="esporte">FUTEBOL</p>
-            <div class="imagem-container">
-                <span class="categoria">EVENTO</span>
-                <img src="https://images.flamengo.com.br/public/images/artigos/36946/1764631963.jpg" alt="Imagem 2">
+        <!-- Card 2 -->
+        <div class="bloco">
+            <div class="topo-bloco">
+                <p class="rotulo">FUTEBOL</p>
+                <a class="ver-todas" href="https://">VEJA TODAS AS<br>NOTÍCIAS</a>
             </div>
-            <div class="texto-card">
-                <h3>noticia<span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
-                <p>cop texto</p>
-            </div>
+            <hr class="linha-separadora">
+
+            <a class="midia" href="https://">
+                <span class="tag">FUTEBOL</span>
+                <img src="https://images.flamengo.com.br/public/images/artigos/36946/1764631963.jpg" alt="">
+
+                <div class="texto-container">
+                    <span class="textoimg">
+                        PELO FLAMENGO, VARELA REGISTRA AS DUAS MAIORES VELOCIDADES DA FINAL
+                    </span>
+                    <span class="subtextoimg">
+                        Lateral atingiu a maior velocidade da decisão aos 92' e esteve entre os atletas mais
+                        participativos em pressão, recuperação e construção ofensiva
+                    </span>
+                </div>
+            </a>
         </div>
 
-        <div class="imagem-card">
-            <p class="esporte">OLÍMPICOS</p>
-            <div class="imagem-container">
-                <span class="categoria">ENTREVISTA</span>
-                <img src="https://images.flamengo.com.br/public/images/artigos/36926/1763916398.jpeg" alt="Imagem 3">
+        <!-- Card 3 -->
+        <div class="bloco">
+            <div class="topo-bloco">
+                <p class="rotulo">BASQUETE</p>
+                <a class="ver-todas" href="https://">VEJA TODAS AS<br>NOTÍCIAS</a>
             </div>
-            <div class="texto-card">
-                <h3>noticia<span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
-                <p>cop texto</p>
-            </div>
+            <hr class="linha-separadora">
+
+            <a class="midia" href="https://">
+                <span class="tag">BASQUETE</span>
+                <img src="https://images.flamengo.com.br/public/images/artigos/36926/1763916398.jpeg" alt="">
+
+                <div class="texto-container">
+                    <span class="textoimg">FLAMENGO VENCE RIO CLARO NA ABERTURA DA RODADA DUPLA E SEGUE LÍDER NO
+                        NNB</span>
+                    <span class="subtextoimg">Na prévia da partida entre Flamengo e RB Bragantino no Maracanã, Mengão
+                        fez a alegria da torcida e confirma favoritismo contra equipe paulista</span>
+                </div>
+            </a>
         </div>
 
-        <div class="imagem-card">
-            <p class="esporte">SÓCIO-TORCEDOR</p>
-            <div class="imagem-container">
-                <span class="categoria">LANÇAMENTO</span>
-                <img src="https://images.flamengo.com.br/public/images/artigos/36937/1764166067.png" alt="Imagem 4">
+        <!-- Card 4 -->
+        <div class="bloco">
+            <div class="topo-bloco">
+                <p class="rotulo">FUTEBOL FEMININO</p>
+                <a class="ver-todas" href="https://">VEJA TODAS AS<br>NOTÍCIAS</a>
             </div>
-            <div class="texto-card">
-                <h3>noticia<span class="vermelho">VEJA TODAS AS NOTÍCIAS</span></h3>
-                <p>cop texto</p>
-            </div>
+            <hr class="linha-separadora">
+
+            <a class="midia" href="https://">
+                <span class="tag">FUTEBOL FEMININO</span>
+                <img src="https://images.flamengo.com.br/public/images/artigos/36937/1764166067.png" alt="">
+
+                <div class="texto-container">
+                    <span class="textoimg">FLAMENGO VAI DISPUTAR A WORLD SEVENS FOOTBALL NOS ESTADOS UNIDOS</span>
+                    <span class="subtextoimg">Torneio de Fut7 será na próxima semana e o rubro-negro está no grupo A com
+                        Kansas City, Tigres-MEX e Toronto-CAN</span>
+                </div>
+            </a>
         </div>
 
     </div>
