--- a/Avaliação 2/index.html
+++ b/Avaliação 2/index.html
@@ -22,7 +22,7 @@
 
         <div class="topobaixologo">
             <a href="">
-                <img src="https://reactnative.dev/img/header_logo.svg" alt="ReactNative">
+                <img src="https://reactnative.dev/img/header_logo.svg" alt="ReactNative" width="45">
                 <h1>React Native</h1>
             </a>
         </div>
