--- a/FisioMais/index.html
+++ b/FisioMais/index.html
@@ -5,9 +5,9 @@
     <title>Fisiomais | Login</title>
     <link rel="stylesheet" href="modelo.css">
 </head>
-<body class="login-page">
+<body class="fazerlogin">
 
-    <div class="login-box">
+    <div class="fzrlogin">
         <h1>Fisiomais</h1>
         <h2>Login</h2>
 
@@ -21,7 +21,7 @@
             <button type="submit">Entrar</button>
         </form>
 
-        <p>Não tem conta? <a href="#">Cadastre-se</a></p>
+        <p>Não tem conta? <a href="cadastro.html">Cadastre-se</a></p>
     </div>
 
 </body>
