--- a/FisioMais/agendamento.html
+++ b/FisioMais/agendamento.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Fisiomais | Agendamentos</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="modelo.css">
 </head>
 <body>
 
