--- a/Fisio+/cadastro.html
+++ b/Fisio+/cadastro.html
@@ -10,7 +10,7 @@
 <header><h1>Cadastro</h1></header>
 
 <main>
-    <form>
+    <form action="dashboard.html">
         <label for="nome">Nome</label>
         <input id="nome" type="text">
 
