--- a/Fisio+/index.html
+++ b/Fisio+/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Fisio+ | Login</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
@@ -28,6 +29,8 @@
                 <input id="senha" type="password" required>
 
                 <button type="submit">Entrar</button>
+
+                <a href="cadastro.html" class="cadastro-link">Cadastre-se</a>
             </form>
         </div>
 
