--- a/Fisio+/agendamento.html
+++ b/Fisio+/agendamento.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Agendamento</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="base.css">
 </head>
 <body>
 
