--- a/Fisio+/index.html
+++ b/Fisio+/index.html
@@ -5,20 +5,17 @@
     <meta charset="UTF-8">
     <title>Fisio+ | Login</title>
     <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
 
     <header class="cabecalho">
-        <img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBPX2u7spYjr-k3fdIrFYDcWuvBVLBHHRZaVAlgYaMT2yk4WpYoA8bqmsSeiOVfPO7IOZVz_1u9CEVdPZ460D1BOvn_-G_fVwkElLa_gipP4_Yo=w1152-h703?auditContext=forDisplay"
-            alt="Fisio+ Logo">
+        <img src="logofisio.png" alt="Fisio+ Logo">
         <h1>FisioMais</h1>
-
     </header>
 
     <main>
-        <div class="Login">
+        <div class="acao">
             <h2>Login</h2>
 
             <form action="dashboard.html">
@@ -30,7 +27,7 @@
 
                 <button type="submit">Entrar</button>
 
-                <a href="cadastro.html" class="cadastro-link">Cadastre-se</a>
+                <a href="cadastro.html" class="opc-link">Cadastre-se</a>
             </form>
         </div>
 
