--- a/Fisio+/dashboard.html
+++ b/Fisio+/dashboard.html
@@ -3,17 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="estilo.css">
+    <title>Fisio+</title>
+    <link rel="stylesheet" href="basedash.css">
 </head>
 
 <body>
 
-    <input type="checkbox" id="menu-toggle">
-
     <header class="cabecalho">
-        <label for="menu-toggle" class="menu-btn">☰</label>
-        <h1>Dashboard</h1>
+        <img src="logofisio.png" alt="Fisio+ Logo">
+        <h1>FisioMais</h1>
     </header>
 
     <nav class="menu-lateral">
