--- a/Fisio+/dashboard.html
+++ b/Fisio+/dashboard.html
@@ -4,32 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Fisio+</title>
+    <link rel="icon" href="fisiong.png">
     <link rel="stylesheet" href="basedash.css">
 </head>
 
 <body>
 
+    <input type="checkbox" id="botaomenu">
+
     <header class="cabecalho">
+        <label for="botaomenu" class="botaomenu">☰</label>
         <img src="logofisio.png" alt="Fisio+ Logo">
         <h1>FisioMais</h1>
     </header>
 
-    <nav class="menu-lateral">
+    <nav class="menulateral">
+        <a href="dashboard.html">Menu</a>
         <a href="clientes.html">Clientes</a>
+        <a href="profissionais.html">Profissionais</a>
         <a href="agendamento.html">Agendamentos</a>
+        <a href="checkin.html">Check-in</a>
+        <a href="prontuarios.html">Avaliações e Prontuários</a>
         <a href="financeiro.html">Financeiro</a>
-    </nav>
+        <a href="mensalidades.html">Mensalidades</a>
+        <a href="relatorios.html">Relatórios</a>
 
-    <main>
-        <div class="dashboard">
-            <div class="card">Clientes</div>
-            <div class="card">Profissionais</div>
-            <div class="card">Agendamentos</div>
-            <div class="card">Financeiro</div>
-            <div class="card">Relatórios</div>
-            <div class="card">Configurações</div>
-        </div>
-    </main>
+    </nav>
 
     <footer>© Fisiomais</footer>
 
