--- a/Fisio+/index.html
+++ b/Fisio+/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header class="cabecalho">
-        <img src="logofisio.png" alt="Fisio+ Logo">
+        <img src="fisiong.png" alt="Fisio+ Logo">
         <h1>FisioMais</h1>
     </header>
 
