--- a/FisioMais/index.html
+++ b/FisioMais/index.html
@@ -2,27 +2,59 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Fisiomais | Login</title>
+    <title>Fisio+</title>
     <link rel="stylesheet" href="modelo.css">
 </head>
-<body class="fazerlogin">
+<body>
 
-    <div class="fzrlogin">
-        <h1>Fisiomais</h1>
-        <h2>Login</h2>
+<div class="container">
 
-        <form>
-            <label>Email</label>
-            <input type="email" placeholder="Digite seu email">
+    <header class="header">
+        <h2 class="logo">Fisio+</h2>
 
-            <label>Senha</label>
-            <input type="password" placeholder="Digite sua senha">
+        <nav class="menu">
+            <a href="#">Home</a>
+            <a href="#">Serviços</a>
+            <a href="#">Equipe</a>
+            <a href="#">Contato</a>
+        </nav>
 
-            <button type="submit">Entrar</button>
-        </form>
+        <button class="btn">Agendar</button>
+    </header>
 
-        <p>Não tem conta? <a href="cadastro.html">Cadastre-se</a></p>
-    </div>
+    <section class="banner">
+        <div class="banner-texto">
+            <h1>Sua saúde,<br>seu bem-estar</h1>
+            <p>Cuidado fisioterapêutico com qualidade e atenção.</p>
+            <button class="btn">Marcar Consulta</button>
+        </div>
+
+        <div class="banner-img">
+            <img src="https://images.unsplash.com/photo-1606813902917-5f95e90dfe0d">
+        </div>
+    </section>
+
+    <section class="servicos">
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1588776814546-1ffcf47267a5">
+            <h3>Ortopedia</h3>
+            <p>Dores musculares e articulares.</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1580281657521-7c9f1f6a9b7b">
+            <h3>Pediatria</h3>
+            <p>Atendimento infantil.</p>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1576765607924-3f7b8410a787">
+            <h3>Reabilitação</h3>
+            <p>Pós-cirúrgico e esportivo.</p>
+        </div>
+    </section>
+
+</div>
 
 </body>
 </html>
